# martin-ai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: __init__.py  prompts.py  settings.py
config/ingestion/: pipeline_config.yaml
config/models/: llm_config.yaml
examples/: knowledge_base_usage.py
scripts/: search_cli.py
scripts/ingest/: batch_ingest.py
scripts/setup/: generate_test_documents.py  initialize_project.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/ingestion/: __init__.py  chunker.py  document_processor.py
src/knowledge/: __init__.py  knowledge_base.py  vector_store.py
src/models/: __init__.py  embeddings.py  llm_interface.py
src/utils/: __init__.py  logger.py  validators.py
